feat: update logic and add Dockerfile.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
-peft
+peft==0.2.0
+transformers==4.27.2
+datasets==2.9.0
+accelerate==0.17.1
+evaluate==0.4.0
+bitsandbytes==0.37.1
+loralib
+rouge-score 
+tensorboard 
+py7zr
 trl
-datasets
-bitsandbytes
+scikit-learn
 einops
+wandb
